improvements to Sitebricks Info website

--- a/sitebricks-web/src/main/resources/Home.html
+++ b/sitebricks-web/src/main/resources/Home.html
@@ -8,7 +8,7 @@
 <header>
   <nav>
     <ul>
-      <li>Home</li>
+      <li>FAQ</li>
       <li>Contribute</li>
       <li>About</li>
     </ul>
@@ -21,7 +21,7 @@
 </header>
 <nav id="left">
   <ul>
-    <li class="back"><a href="#">&larr; Top</a></li>
+    <li class="back"><a href="#">&uarr; Up</a></li>
     <li><a href="#">5 minute tutorial</a></li>
     <li><a href="#">Contribute</a></li>
     <li><a href="#">About</a></li>
@@ -35,6 +35,12 @@
   public static void main() {
     <b>doStuff();</b>
   }</pre>
+    <p>Lorem ispium diaz. Check us out on our awesome channel. Lorem ispium diaz. Check us out on
+      our awesome channel. Lorem ispium diaz. Check us out on our awesome channel</p>
+    <h3>Subheading #1</h3>
+    <p>Lorem ispium diaz. Check us out on our awesome channel. Lorem ispium diaz. Check us out on
+      our awesome channel. Lorem ispium diaz. Check us out on our awesome channel</p>
+    <h4>Subheading #2</h4>
     <p>Lorem ispium diaz. Check us out on our awesome channel. Lorem ispium diaz. Check us out on
       our awesome channel. Lorem ispium diaz. Check us out on our awesome channel</p>
   </article>
