--- a/sitebricks-web/src/main/resources/Home.html
+++ b/sitebricks-web/src/main/resources/Home.html
@@ -43,7 +43,26 @@
   </ul>
 </nav>
 <section id="main">
-  ${this.renderHome()}
+  <article>
+    <h2>Sitebricks Async</h2>
+    <p>
+    Back in our August Food Awards issue, Time Out sent out a call to arms for casual diners to step
+    up and bring it. And Sydney answered with a whole bunch of new restaurants offering great value
+    food in the kind of places in which you’d actually want to kick back in.
+    </p>
+  <pre>
+ChannelFuture writeFuture;
+    
+if (ch.getPipeline().get(SslHandler.class) != null) {
+   writeFuture = ch.write(new ChunkedFile(raf, 0, <b>fileLength</b>, 8192));
+} else {</pre>
+    <p>
+    Bar H, one of the many amazing new places on offer, is brought to you by husband-and-wife team
+    Hamish (chef) Ingham and Rebecca (restaurant manager/sommelier/architect) Lines. Between them,
+    they boast an amazing résumé including Billy Kwong (Hamish cooked there for nine years), Bécasse
+    and Pier.
+    </p>
+  </article>
 </section>
 <div id="editor">
   <article contenteditable="true"></article>
