o better integration of freemarker

--- a/sitebricks-web/src/main/resources/Home.html
+++ b/sitebricks-web/src/main/resources/Home.html
@@ -4,68 +4,9 @@
   <title>Sitebricks :: A Web platform</title>
   <link rel="stylesheet" href="main.css">
   <script type="text/javascript" src="js/jquery-1.4.3.min.js"></script>
-  <script type="text/javascript" src="js/json2.js"></script>
-  <script type="text/javascript" src="js/rpc.js"></script>
-  <script type="text/javascript" src="js/sitebricks.js"></script>
+  <script type="text/javascript" src="js/visualizations.js"></script>
 </head>
 <body>
-<header>
-  <nav>
-    <ul>
-      <li>FAQ</li>
-      <li>Contribute</li>
-      <li>About</li>
-    </ul>
-  </nav>
-  <form>
-    <input class="searchbox" type="text" value="Search"/>
-  </form>
-  <h1>sitebricks<span>.info</span></h1>
-  <nav id="controls">
-    <div class="view">
-      <button id="edit">Edit</button>
-      <button id="delete">Delete</button>
-    </div>
-    <div class="edit">
-      <button id="save">Save</button>
-      <button id="discard">Discard</button>
-    </div>
-  </nav>
-  <div class="groove"></div>
-</header>
-<nav id="left">
-  <ul>
-    <li id="top" class="back"><a href="#">&uarr; Top</a></li>
-    <li id="back" class="back"><a href="#">&larr; Back</a></li>
-
-    @Repeat(items=index.list(), var="node")
-    <li><a class="wikilink" href="#" name="${node.name}">${node.topic}</a></li>
-  </ul>
-</nav>
-<section id="main">
-  <article>
-    <h2>Sitebricks Async</h2>
-    <p>
-    Back in our August Food Awards issue, Time Out sent out a call to arms for casual diners to step
-    up and bring it. And Sydney answered with a whole bunch of new restaurants offering great value
-    food in the kind of places in which you’d actually want to kick back in.
-    </p>
-  <pre>
-ChannelFuture writeFuture;
-    
-if (ch.getPipeline().get(SslHandler.class) != null) {
-   writeFuture = ch.write(new ChunkedFile(raf, 0, <b>fileLength</b>, 8192));
-} else {</pre>
-    <p>
-    Bar H, one of the many amazing new places on offer, is brought to you by husband-and-wife team
-    Hamish (chef) Ingham and Rebecca (restaurant manager/sommelier/architect) Lines. Between them,
-    they boast an amazing résumé including Billy Kwong (Hamish cooked there for nine years), Bécasse
-    and Pier.
-    </p>
-  </article>
-</section>
-<div id="editor">
-  <article contenteditable="true"></article>
-</div>
+Boo
 </body>
 </html>
