Added sitebricks-channel module, support for websocket and comet

--- a/sitebricks-acceptance-tests/src/main/resources/index.html
+++ b/sitebricks-acceptance-tests/src/main/resources/index.html
@@ -54,6 +54,8 @@ Released for free under a Creative Commons Attribution 2.5 License
                         <li><a class="comments" href="/i18n">Internationalization</a> (using browser locale) </li>
                         <li><a class="comments" href="/template/mvel">Pluggable Templating</a> (using MVEL templates instead of sitebricks) </li>
 
+                        <li><a class="comments" href="/chat">Chat client</a> (using HTML5 websockets) </li>
+
                     </ul>
                 </div>
 
