JSP integration cleanup + JSP acceptance tests

--- a/sitebricks-acceptance-tests/src/main/resources/index.html
+++ b/sitebricks-acceptance-tests/src/main/resources/index.html
@@ -56,6 +56,8 @@ Released for free under a Creative Commons Attribution 2.5 License
 
                         <li><a class="comments" href="/chat">Chat client</a> (using HTML5 websockets) </li>
 
+                        <li><a class="comments" href="/jsp">JSP page</a></li>
+
                     </ul>
                 </div>
 
