More tests + i18n the error messages

--- a/sitebricks-acceptance-tests/src/main/resources/HtmlValidating.html
+++ b/sitebricks-acceptance-tests/src/main/resources/HtmlValidating.html
@@ -30,6 +30,8 @@ Released for free under a Creative Commons Attribution 2.5 License
         <!-- start content -->
         <div id="content">
         
+            <div>Any validation errors here?:</div>
+
             @Errors
             <div></div>
         
