--- a/sitebricks-acceptance-tests/src/main/resources/index.html
+++ b/sitebricks-acceptance-tests/src/main/resources/index.html
@@ -59,6 +59,7 @@ Released for free under a Creative Commons Attribution 2.5 License
                         <li><a class="comments" href="/jsp">JSP page</a></li>
 
                         <li><a class="comments" href="/htmlvalidating">HTML Validating page</a></li>
+                        <li><a class="comments" href="/htmlvalidatingasform">HTML Validating via method Parameter page</a></li>
                         <li><a class="comments" href="/jspvalidating">JSP Validating page</a></li>
                         <li><a class="comments" href="./FormValidatingRest.html">Form Submitting to Validating Rest via Ajax</a></li>
 
